# RAG-Design-Patterns

./: .gitignore  README.md  enrich_all_datasets.py  main.py  pyproject.toml  requirements.txt
01_Standard_RAG/: .env  README.md  app.py  requirements.txt
01_Standard_RAG/data/: sample.txt
01_Standard_RAG/src/: __init__.py  graph.py  ingestion.py  prompts.py  retriever.py
02_Hybrid_RAG/: README.md  app.py  requirements.txt
02_Hybrid_RAG/data/: sample.txt
02_Hybrid_RAG/src/: fusion.py  graph.py  ingestion.py  retriever.py  state.py
03_Contextual_RAG/: README.md  app.py
04_Hierarchical_RAG/: README.md  app.py  requirements.txt
05_Fusion_RAG/: README.md  app.py  requirements.txt
06_MultiSource_RAG/: README.md  app.py  requirements.txt
07_Reranker_Centric_RAG/: README.md  app.py  requirements.txt
08_ColBERT_RAG/: README.md  app.py  collection.txt  requirements.txt
09_MultiHop_RAG/: README.md  app.py
10_Graph_RAG/: README.md  app.py  local_graph.json  requirements.txt
11_KG_RAG/: README.md  app.py  local_graph.json  requirements.txt
12_RAPTOR_RAG/: README.md  app.py  requirements.txt
13_Self_RAG/: README.md  app.py  requirements.txt
14_Corrective_RAG/: README.md  app.py  requirements.txt
15_Corrective_Feedback_RAG/: README.md  app.py  requirements.txt
16_Adaptive_RAG/: README.md  app.py  requirements.txt
17_ReAct_RAG/: README.md  app.py
18_Memory_Augmented_RAG/: README.md  app.py  requirements.txt
19_Agentic_RAG/: README.md  app.py
20_Deep_Research_RAG/: README.md  app.py
_data/: source.csv  source.html  source.md  source.yaml
(+129 files in other folders)
