[project]
name = "rag-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "colbert-ai>=0.2.22",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "reportlab>=4.5.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "uuid>=1.30",
]
